fix overflow of age

--- a/scss/modules.scss
+++ b/scss/modules.scss
@@ -28,7 +28,6 @@
             display: block;
             font: bold 16px $Ideal;
             margin: 7px 0 5px 0;
-            white-space: nowrap;
 
             span.unit {
                 font: normal 11px $Ideal;
